--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "@tanstack/react-query": "^5.59.0",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-query": "^1.2.9",
     "axios": "^1.7.7",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.7.1",
     "react-native-svg-transformer": "^1.5.0",
     "yup": "^1.4.0"
@@ -43,7 +47,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.6.3",
-    "prettier": "^2.8.8",
+    "prettier": "^3.3.3",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.0.4"
   },
