--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "axios": "^1.7.7",
     "deprecated-react-native-prop-types": "^5.0.0",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-element-dropdown": "^2.12.1",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
