--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "axios": "^1.7.7",
     "deprecated-react-native-prop-types": "^5.0.0",
     "formik": "^2.4.6",
+    "mobx": "^6.13.3",
+    "mobx-react-lite": "^4.0.7",
+    "mobx-state-tree": "^6.0.1",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.4",
@@ -34,6 +37,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.7.1",
     "react-native-svg-transformer": "^1.5.0",
+    "react-native-toast-message": "^2.2.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
