--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "react-native": "0.75.4",
     "react-native-document-picker": "^9.3.1",
     "react-native-element-dropdown": "^2.12.1",
+    "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-modal": "^13.0.1",
+    "react-native-pdf": "^6.7.5",
+    "react-native-permissions": "^5.0.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-snap-carousel": "^3.9.1",
